Code/syntax.output
Terminals unused in grammar

    NEG


State 145 conflicts: 1 shift/reduce
State 147 conflicts: 1 shift/reduce
State 156 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | Specifier error SEMI
    8       | Specifier error RC
    9       | error SEMI

   10 ExtDecList: VarDec
   11           | VarDec COMMA ExtDecList

   12 Specifier: TYPE
   13          | StructSpecifier

   14 StructSpecifier: STRUCT OptTag LC DefList RC
   15                | STRUCT Tag
   16                | STRUCT error LC DefList RC
   17                | STRUCT error LC error RC
   18                | STRUCT error RC

   19 OptTag: ID
   20       | %empty

   21 Tag: ID

   22 VarDec: ID
   23       | VarDec LB INT RB
   24       | VarDec LB error RB

   25 FunDec: ID LP VarList RP
   26       | ID LP RP
   27       | ID LP error RP
   28       | error LP VarList RP

   29 VarList: ParamDec COMMA VarList
   30        | ParamDec

   31 ParamDec: Specifier VarDec

   32 CompSt: LC DefList StmtList RC
   33       | error RC

   34 StmtList: Stmt StmtList
   35         | %empty

   36 Stmt: Exp SEMI
   37     | CompSt
   38     | RETURN Exp SEMI
   39     | IF LP Exp RP Stmt
   40     | IF LP Exp RP Stmt ELSE Stmt
   41     | WHILE LP Exp RP Stmt
   42     | RETURN error SEMI
   43     | IF LP error RP Stmt
   44     | IF LP Exp RP error
   45     | IF LP error RP error
   46     | IF LP error RP Stmt ELSE Stmt
   47     | IF LP Exp RP error ELSE Stmt
   48     | IF LP Exp RP Stmt ELSE error
   49     | WHILE LP error RP Stmt

   50 DefList: Def DefList
   51        | %empty

   52 Def: Specifier DecList SEMI
   53    | Specifier error SEMI

   54 DecList: Dec
   55        | Dec COMMA DecList

   56 Dec: VarDec
   57    | VarDec ASSIGNOP Exp

   58 Exp: Exp ASSIGNOP Exp
   59    | Exp AND Exp
   60    | Exp OR Exp
   61    | Exp RELOP Exp
   62    | Exp PLUS Exp
   63    | Exp MINUS Exp
   64    | Exp STAR Exp
   65    | Exp DIV Exp
   66    | LP Exp RP
   67    | MINUS Exp
   68    | NOT Exp
   69    | ID LP Args RP
   70    | ID LP RP
   71    | Exp LB Exp RB
   72    | Exp DOT ID
   73    | ID
   74    | INT
   75    | FLOAT
   76    | LP error RP
   77    | ID LP error RP
   78    | Exp LB error RB

   79 Args: Exp COMMA Args
   80     | Exp
   81     | error COMMA Args


Terminals, with rules where they appear

    $end (0) 0
    error (256) 7 8 9 16 17 18 24 27 28 33 42 43 44 45 46 47 48 49 53 76 77 78 81
    SEMI (258) 4 5 7 9 36 38 42 52 53
    COMMA (259) 11 29 55 79 81
    TYPE (260) 12
    STRUCT (261) 14 15 16 17 18
    LC (262) 14 16 17 32
    RC (263) 8 14 16 17 18 32 33
    ID (264) 19 21 22 25 26 27 69 70 72 73 77
    LB (265) 23 24 71 78
    INT (266) 23 74
    RB (267) 23 24 71 78
    LP (268) 25 26 27 28 39 40 41 43 44 45 46 47 48 49 66 69 70 76 77
    RP (269) 25 26 27 28 39 40 41 43 44 45 46 47 48 49 66 69 70 76 77
    RETURN (270) 38 42
    IF (271) 39 40 43 44 45 46 47 48
    ELSE (272) 40 46 47 48
    WHILE (273) 41 49
    ASSIGNOP (274) 57 58
    AND (275) 59
    OR (276) 60
    RELOP (277) 61
    PLUS (278) 62
    MINUS (279) 63 67
    STAR (280) 64
    DIV (281) 65
    NOT (282) 68
    FLOAT (283) 75
    DOT (284) 72
    NEG (285)
    LOWER_THAN_ELSE (286)


Nonterminals, with rules where they appear

    $accept (32)
        on left: 0
    Program (33)
        on left: 1
        on right: 0
    ExtDefList (34)
        on left: 2 3
        on right: 1 2
    ExtDef (35)
        on left: 4 5 6 7 8 9
        on right: 2
    ExtDecList (36)
        on left: 10 11
        on right: 4 11
    Specifier (37)
        on left: 12 13
        on right: 4 5 6 7 8 31 52 53
    StructSpecifier (38)
        on left: 14 15 16 17 18
        on right: 13
    OptTag (39)
        on left: 19 20
        on right: 14
    Tag (40)
        on left: 21
        on right: 15
    VarDec (41)
        on left: 22 23 24
        on right: 10 11 23 24 31 56 57
    FunDec (42)
        on left: 25 26 27 28
        on right: 6
    VarList (43)
        on left: 29 30
        on right: 25 28 29
    ParamDec (44)
        on left: 31
        on right: 29 30
    CompSt (45)
        on left: 32 33
        on right: 6 37
    StmtList (46)
        on left: 34 35
        on right: 32 34
    Stmt (47)
        on left: 36 37 38 39 40 41 42 43 44 45 46 47 48 49
        on right: 34 39 40 41 43 46 47 48 49
    DefList (48)
        on left: 50 51
        on right: 14 16 32 50
    Def (49)
        on left: 52 53
        on right: 50
    DecList (50)
        on left: 54 55
        on right: 52 55
    Dec (51)
        on left: 56 57
        on right: 54 55
    Exp (52)
        on left: 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78
        on right: 36 38 39 40 41 44 47 48 57 58 59 60 61 62 63 64 65 66 67 68 71 72 78 79 80
    Args (53)
        on left: 79 80 81
        on right: 69 79 81


State 0

    0 $accept: . Program $end

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    Program          go to state 4
    ExtDefList       go to state 5
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 1

    9 ExtDef: error . SEMI

    SEMI  shift, and go to state 9


State 2

   12 Specifier: TYPE .

    $default  reduce using rule 12 (Specifier)


State 3

   14 StructSpecifier: STRUCT . OptTag LC DefList RC
   15                | STRUCT . Tag
   16                | STRUCT . error LC DefList RC
   17                | STRUCT . error LC error RC
   18                | STRUCT . error RC

    error  shift, and go to state 10
    ID     shift, and go to state 11

    LC  reduce using rule 20 (OptTag)

    OptTag  go to state 12
    Tag     go to state 13


State 4

    0 $accept: Program . $end

    $end  shift, and go to state 14


State 5

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 6

    2 ExtDefList: ExtDef . ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 15
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 7

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt
    7       | Specifier . error SEMI
    8       | Specifier . error RC

    error  shift, and go to state 16
    SEMI   shift, and go to state 17
    ID     shift, and go to state 18

    ExtDecList  go to state 19
    VarDec      go to state 20
    FunDec      go to state 21


State 8

   13 Specifier: StructSpecifier .

    $default  reduce using rule 13 (Specifier)


State 9

    9 ExtDef: error SEMI .

    $default  reduce using rule 9 (ExtDef)


State 10

   16 StructSpecifier: STRUCT error . LC DefList RC
   17                | STRUCT error . LC error RC
   18                | STRUCT error . RC

    LC  shift, and go to state 22
    RC  shift, and go to state 23


State 11

   19 OptTag: ID .
   21 Tag: ID .

    LC        reduce using rule 19 (OptTag)
    $default  reduce using rule 21 (Tag)


State 12

   14 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 24


State 13

   15 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 15 (StructSpecifier)


State 14

    0 $accept: Program $end .

    $default  accept


State 15

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 16

    7 ExtDef: Specifier error . SEMI
    8       | Specifier error . RC
   28 FunDec: error . LP VarList RP

    SEMI  shift, and go to state 25
    RC    shift, and go to state 26
    LP    shift, and go to state 27


State 17

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 18

   22 VarDec: ID .
   25 FunDec: ID . LP VarList RP
   26       | ID . LP RP
   27       | ID . LP error RP

    LP  shift, and go to state 28

    $default  reduce using rule 22 (VarDec)


State 19

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 29


State 20

   10 ExtDecList: VarDec .
   11           | VarDec . COMMA ExtDecList
   23 VarDec: VarDec . LB INT RB
   24       | VarDec . LB error RB

    COMMA  shift, and go to state 30
    LB     shift, and go to state 31

    $default  reduce using rule 10 (ExtDecList)


State 21

    6 ExtDef: Specifier FunDec . CompSt

    error  shift, and go to state 32
    LC     shift, and go to state 33

    CompSt  go to state 34


State 22

   16 StructSpecifier: STRUCT error LC . DefList RC
   17                | STRUCT error LC . error RC

    error   shift, and go to state 35
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    RC  reduce using rule 51 (DefList)

    Specifier        go to state 36
    StructSpecifier  go to state 8
    DefList          go to state 37
    Def              go to state 38


State 23

   18 StructSpecifier: STRUCT error RC .

    $default  reduce using rule 18 (StructSpecifier)


State 24

   14 StructSpecifier: STRUCT OptTag LC . DefList RC

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 51 (DefList)

    Specifier        go to state 36
    StructSpecifier  go to state 8
    DefList          go to state 39
    Def              go to state 38


State 25

    7 ExtDef: Specifier error SEMI .

    $default  reduce using rule 7 (ExtDef)


State 26

    8 ExtDef: Specifier error RC .

    $default  reduce using rule 8 (ExtDef)


State 27

   28 FunDec: error LP . VarList RP

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        go to state 40
    StructSpecifier  go to state 8
    VarList          go to state 41
    ParamDec         go to state 42


State 28

   25 FunDec: ID LP . VarList RP
   26       | ID LP . RP
   27       | ID LP . error RP

    error   shift, and go to state 43
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3
    RP      shift, and go to state 44

    Specifier        go to state 40
    StructSpecifier  go to state 8
    VarList          go to state 45
    ParamDec         go to state 42


State 29

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 30

   11 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 46

    ExtDecList  go to state 47
    VarDec      go to state 20


State 31

   23 VarDec: VarDec LB . INT RB
   24       | VarDec LB . error RB

    error  shift, and go to state 48
    INT    shift, and go to state 49


State 32

   33 CompSt: error . RC

    RC  shift, and go to state 50


State 33

   32 CompSt: LC . DefList StmtList RC

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 51 (DefList)

    Specifier        go to state 36
    StructSpecifier  go to state 8
    DefList          go to state 51
    Def              go to state 38


State 34

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 35

   17 StructSpecifier: STRUCT error LC error . RC

    RC  shift, and go to state 52


State 36

   52 Def: Specifier . DecList SEMI
   53    | Specifier . error SEMI

    error  shift, and go to state 53
    ID     shift, and go to state 46

    VarDec   go to state 54
    DecList  go to state 55
    Dec      go to state 56


State 37

   16 StructSpecifier: STRUCT error LC DefList . RC

    RC  shift, and go to state 57


State 38

   50 DefList: Def . DefList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 51 (DefList)

    Specifier        go to state 36
    StructSpecifier  go to state 8
    DefList          go to state 58
    Def              go to state 38


State 39

   14 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 59


State 40

   31 ParamDec: Specifier . VarDec

    ID  shift, and go to state 46

    VarDec  go to state 60


State 41

   28 FunDec: error LP VarList . RP

    RP  shift, and go to state 61


State 42

   29 VarList: ParamDec . COMMA VarList
   30        | ParamDec .

    COMMA  shift, and go to state 62

    $default  reduce using rule 30 (VarList)


State 43

   27 FunDec: ID LP error . RP

    RP  shift, and go to state 63


State 44

   26 FunDec: ID LP RP .

    $default  reduce using rule 26 (FunDec)


State 45

   25 FunDec: ID LP VarList . RP

    RP  shift, and go to state 64


State 46

   22 VarDec: ID .

    $default  reduce using rule 22 (VarDec)


State 47

   11 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 11 (ExtDecList)


State 48

   24 VarDec: VarDec LB error . RB

    RB  shift, and go to state 65


State 49

   23 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 66


State 50

   33 CompSt: error RC .

    $default  reduce using rule 33 (CompSt)


State 51

   32 CompSt: LC DefList . StmtList RC

    error   shift, and go to state 32
    LC      shift, and go to state 33
    ID      shift, and go to state 67
    INT     shift, and go to state 68
    LP      shift, and go to state 69
    RETURN  shift, and go to state 70
    IF      shift, and go to state 71
    WHILE   shift, and go to state 72
    MINUS   shift, and go to state 73
    NOT     shift, and go to state 74
    FLOAT   shift, and go to state 75

    RC  reduce using rule 35 (StmtList)

    CompSt    go to state 76
    StmtList  go to state 77
    Stmt      go to state 78
    Exp       go to state 79


State 52

   17 StructSpecifier: STRUCT error LC error RC .

    $default  reduce using rule 17 (StructSpecifier)


State 53

   53 Def: Specifier error . SEMI

    SEMI  shift, and go to state 80


State 54

   23 VarDec: VarDec . LB INT RB
   24       | VarDec . LB error RB
   56 Dec: VarDec .
   57    | VarDec . ASSIGNOP Exp

    LB        shift, and go to state 31
    ASSIGNOP  shift, and go to state 81

    $default  reduce using rule 56 (Dec)


State 55

   52 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 82


State 56

   54 DecList: Dec .
   55        | Dec . COMMA DecList

    COMMA  shift, and go to state 83

    $default  reduce using rule 54 (DecList)


State 57

   16 StructSpecifier: STRUCT error LC DefList RC .

    $default  reduce using rule 16 (StructSpecifier)


State 58

   50 DefList: Def DefList .

    $default  reduce using rule 50 (DefList)


State 59

   14 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 14 (StructSpecifier)


State 60

   23 VarDec: VarDec . LB INT RB
   24       | VarDec . LB error RB
   31 ParamDec: Specifier VarDec .

    LB  shift, and go to state 31

    $default  reduce using rule 31 (ParamDec)


State 61

   28 FunDec: error LP VarList RP .

    $default  reduce using rule 28 (FunDec)


State 62

   29 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        go to state 40
    StructSpecifier  go to state 8
    VarList          go to state 84
    ParamDec         go to state 42


State 63

   27 FunDec: ID LP error RP .

    $default  reduce using rule 27 (FunDec)


State 64

   25 FunDec: ID LP VarList RP .

    $default  reduce using rule 25 (FunDec)


State 65

   24 VarDec: VarDec LB error RB .

    $default  reduce using rule 24 (VarDec)


State 66

   23 VarDec: VarDec LB INT RB .

    $default  reduce using rule 23 (VarDec)


State 67

   69 Exp: ID . LP Args RP
   70    | ID . LP RP
   73    | ID .
   77    | ID . LP error RP

    LP  shift, and go to state 85

    $default  reduce using rule 73 (Exp)


State 68

   74 Exp: INT .

    $default  reduce using rule 74 (Exp)


State 69

   66 Exp: LP . Exp RP
   76    | LP . error RP

    error  shift, and go to state 86
    ID     shift, and go to state 67
    INT    shift, and go to state 68
    LP     shift, and go to state 69
    MINUS  shift, and go to state 73
    NOT    shift, and go to state 74
    FLOAT  shift, and go to state 75

    Exp  go to state 87


State 70

   38 Stmt: RETURN . Exp SEMI
   42     | RETURN . error SEMI

    error  shift, and go to state 88
    ID     shift, and go to state 67
    INT    shift, and go to state 68
    LP     shift, and go to state 69
    MINUS  shift, and go to state 73
    NOT    shift, and go to state 74
    FLOAT  shift, and go to state 75

    Exp  go to state 89


State 71

   39 Stmt: IF . LP Exp RP Stmt
   40     | IF . LP Exp RP Stmt ELSE Stmt
   43     | IF . LP error RP Stmt
   44     | IF . LP Exp RP error
   45     | IF . LP error RP error
   46     | IF . LP error RP Stmt ELSE Stmt
   47     | IF . LP Exp RP error ELSE Stmt
   48     | IF . LP Exp RP Stmt ELSE error

    LP  shift, and go to state 90


State 72

   41 Stmt: WHILE . LP Exp RP Stmt
   49     | WHILE . LP error RP Stmt

    LP  shift, and go to state 91


State 73

   67 Exp: MINUS . Exp

    ID     shift, and go to state 67
    INT    shift, and go to state 68
    LP     shift, and go to state 69
    MINUS  shift, and go to state 73
    NOT    shift, and go to state 74
    FLOAT  shift, and go to state 75

    Exp  go to state 92


State 74

   68 Exp: NOT . Exp

    ID     shift, and go to state 67
    INT    shift, and go to state 68
    LP     shift, and go to state 69
    MINUS  shift, and go to state 73
    NOT    shift, and go to state 74
    FLOAT  shift, and go to state 75

    Exp  go to state 93


State 75

   75 Exp: FLOAT .

    $default  reduce using rule 75 (Exp)


State 76

   37 Stmt: CompSt .

    $default  reduce using rule 37 (Stmt)


State 77

   32 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 94


State 78

   34 StmtList: Stmt . StmtList

    error   shift, and go to state 32
    LC      shift, and go to state 33
    ID      shift, and go to state 67
    INT     shift, and go to state 68
    LP      shift, and go to state 69
    RETURN  shift, and go to state 70
    IF      shift, and go to state 71
    WHILE   shift, and go to state 72
    MINUS   shift, and go to state 73
    NOT     shift, and go to state 74
    FLOAT   shift, and go to state 75

    RC  reduce using rule 35 (StmtList)

    CompSt    go to state 76
    StmtList  go to state 95
    Stmt      go to state 78
    Exp       go to state 79


State 79

   36 Stmt: Exp . SEMI
   58 Exp: Exp . ASSIGNOP Exp
   59    | Exp . AND Exp
   60    | Exp . OR Exp
   61    | Exp . RELOP Exp
   62    | Exp . PLUS Exp
   63    | Exp . MINUS Exp
   64    | Exp . STAR Exp
   65    | Exp . DIV Exp
   71    | Exp . LB Exp RB
   72    | Exp . DOT ID
   78    | Exp . LB error RB

    SEMI      shift, and go to state 96
    LB        shift, and go to state 97
    ASSIGNOP  shift, and go to state 98
    AND       shift, and go to state 99
    OR        shift, and go to state 100
    RELOP     shift, and go to state 101
    PLUS      shift, and go to state 102
    MINUS     shift, and go to state 103
    STAR      shift, and go to state 104
    DIV       shift, and go to state 105
    DOT       shift, and go to state 106


State 80

   53 Def: Specifier error SEMI .

    $default  reduce using rule 53 (Def)


State 81

   57 Dec: VarDec ASSIGNOP . Exp

    ID     shift, and go to state 67
    INT    shift, and go to state 68
    LP     shift, and go to state 69
    MINUS  shift, and go to state 73
    NOT    shift, and go to state 74
    FLOAT  shift, and go to state 75

    Exp  go to state 107


State 82

   52 Def: Specifier DecList SEMI .

    $default  reduce using rule 52 (Def)


State 83

   55 DecList: Dec COMMA . DecList

    ID  shift, and go to state 46

    VarDec   go to state 54
    DecList  go to state 108
    Dec      go to state 56


State 84

   29 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 29 (VarList)


State 85

   69 Exp: ID LP . Args RP
   70    | ID LP . RP
   77    | ID LP . error RP

    error  shift, and go to state 109
    ID     shift, and go to state 67
    INT    shift, and go to state 68
    LP     shift, and go to state 69
    RP     shift, and go to state 110
    MINUS  shift, and go to state 73
    NOT    shift, and go to state 74
    FLOAT  shift, and go to state 75

    Exp   go to state 111
    Args  go to state 112


State 86

   76 Exp: LP error . RP

    RP  shift, and go to state 113


State 87

   58 Exp: Exp . ASSIGNOP Exp
   59    | Exp . AND Exp
   60    | Exp . OR Exp
   61    | Exp . RELOP Exp
   62    | Exp . PLUS Exp
   63    | Exp . MINUS Exp
   64    | Exp . STAR Exp
   65    | Exp . DIV Exp
   66    | LP Exp . RP
   71    | Exp . LB Exp RB
   72    | Exp . DOT ID
   78    | Exp . LB error RB

    LB        shift, and go to state 97
    RP        shift, and go to state 114
    ASSIGNOP  shift, and go to state 98
    AND       shift, and go to state 99
    OR        shift, and go to state 100
    RELOP     shift, and go to state 101
    PLUS      shift, and go to state 102
    MINUS     shift, and go to state 103
    STAR      shift, and go to state 104
    DIV       shift, and go to state 105
    DOT       shift, and go to state 106


State 88

   42 Stmt: RETURN error . SEMI

    SEMI  shift, and go to state 115


State 89

   38 Stmt: RETURN Exp . SEMI
   58 Exp: Exp . ASSIGNOP Exp
   59    | Exp . AND Exp
   60    | Exp . OR Exp
   61    | Exp . RELOP Exp
   62    | Exp . PLUS Exp
   63    | Exp . MINUS Exp
   64    | Exp . STAR Exp
   65    | Exp . DIV Exp
   71    | Exp . LB Exp RB
   72    | Exp . DOT ID
   78    | Exp . LB error RB

    SEMI      shift, and go to state 116
    LB        shift, and go to state 97
    ASSIGNOP  shift, and go to state 98
    AND       shift, and go to state 99
    OR        shift, and go to state 100
    RELOP     shift, and go to state 101
    PLUS      shift, and go to state 102
    MINUS     shift, and go to state 103
    STAR      shift, and go to state 104
    DIV       shift, and go to state 105
    DOT       shift, and go to state 106


State 90

   39 Stmt: IF LP . Exp RP Stmt
   40     | IF LP . Exp RP Stmt ELSE Stmt
   43     | IF LP . error RP Stmt
   44     | IF LP . Exp RP error
   45     | IF LP . error RP error
   46     | IF LP . error RP Stmt ELSE Stmt
   47     | IF LP . Exp RP error ELSE Stmt
   48     | IF LP . Exp RP Stmt ELSE error

    error  shift, and go to state 117
    ID     shift, and go to state 67
    INT    shift, and go to state 68
    LP     shift, and go to state 69
    MINUS  shift, and go to state 73
    NOT    shift, and go to state 74
    FLOAT  shift, and go to state 75

    Exp  go to state 118


State 91

   41 Stmt: WHILE LP . Exp RP Stmt
   49     | WHILE LP . error RP Stmt

    error  shift, and go to state 119
    ID     shift, and go to state 67
    INT    shift, and go to state 68
    LP     shift, and go to state 69
    MINUS  shift, and go to state 73
    NOT    shift, and go to state 74
    FLOAT  shift, and go to state 75

    Exp  go to state 120


State 92

   58 Exp: Exp . ASSIGNOP Exp
   59    | Exp . AND Exp
   60    | Exp . OR Exp
   61    | Exp . RELOP Exp
   62    | Exp . PLUS Exp
   63    | Exp . MINUS Exp
   64    | Exp . STAR Exp
   65    | Exp . DIV Exp
   67    | MINUS Exp .
   71    | Exp . LB Exp RB
   72    | Exp . DOT ID
   78    | Exp . LB error RB

    LB    shift, and go to state 97
    STAR  shift, and go to state 104
    DIV   shift, and go to state 105
    DOT   shift, and go to state 106

    $default  reduce using rule 67 (Exp)


State 93

   58 Exp: Exp . ASSIGNOP Exp
   59    | Exp . AND Exp
   60    | Exp . OR Exp
   61    | Exp . RELOP Exp
   62    | Exp . PLUS Exp
   63    | Exp . MINUS Exp
   64    | Exp . STAR Exp
   65    | Exp . DIV Exp
   68    | NOT Exp .
   71    | Exp . LB Exp RB
   72    | Exp . DOT ID
   78    | Exp . LB error RB

    LB   shift, and go to state 97
    DOT  shift, and go to state 106

    $default  reduce using rule 68 (Exp)


State 94

   32 CompSt: LC DefList StmtList RC .

    $default  reduce using rule 32 (CompSt)


State 95

   34 StmtList: Stmt StmtList .

    $default  reduce using rule 34 (StmtList)


State 96

   36 Stmt: Exp SEMI .

    $default  reduce using rule 36 (Stmt)


State 97

   71 Exp: Exp LB . Exp RB
   78    | Exp LB . error RB
